@@ -8,6 +8,10 @@ copyright_year = 2009
 :version = 0.025
 Authority.authority = cpan:FLORA
 -remove = Test::UnusedVars
+installer = MakeMaker
+Prereqs::AuthorDeps.exclude = inc::DynamicPrereqs
+
+[=inc::DynamicPrereqs]
 
 [Prereqs::Soften]
 module = Moose
@@ -32,7 +36,7 @@ Package::Stash::XS = 0
 [Prereqs / DevelopRequires]
 Moose = 0
 Moo = 0
-Role::Tiny = 0
+Role::Tiny = 1.003000
 MooseX::Role::Parameterized = 0
 
 [Prereqs / DevelopRecommends]
